-----------------------
Handy Dictionary v0.4
-----------------------
- Restart-less
	- From next time there will be no restart required to receive updates
- Enable tool for form elements
	- double click on words to lookup inside input-box/text-area OR
	- right click on input-box/text-area and perform lookup
- Fix, positioning of pop-up when click near right/bottom edge.
	- Pop-up will be always displayed in visible window, no mater where you click 
- Compact Mode
	- For advance user quick lookup (only simple definition/description) in compact mode.
- Native look for existing interface
	- Existing interface is changed to display definition in native look/style
- Keyboard shortcuts
	- Advance user can access menus/preferences using shortcuts 

------------------------------------------------------------------------------------------------

Handy Dictionary v0.3 (6-Dec-2012)
- support for link/anchor
	Right click on any link and lookup words from context menu.
- select any word/phrase then right click to lookup for the same.
- dictionary selection
	select any of five dictionary for lookup using preference menu.
- suport iframe
	Content from iframe can be selected
- ui changes
	- interface color/background changed.
	- open in new tab
		Opens dictionary website in seperate tab
	- lookup manually
		Manually perform lookup operation.
	- escape button to close popup
		Keyboard event is attached so that pressing the "escape" button will close inline popup.
- localization support
	- internally refactored to support additional locales in future.
- fix iframe related issue in html response from dictionary
- fix related with manual enable/disable
- fix for webpage containning frameset