@@ -4,7 +4,7 @@
     <em:id>kbatu.patel@gmail.com</em:id>
     <em:type>2</em:type>
     <em:name>Handy Dictionary</em:name>
-    <em:version>0.4</em:version>
+    <em:version>0.5</em:version>
     <em:description>Handy Dictionary</em:description>
     <em:creator>Snehal Patel</em:creator>
 	<em:bootstrap>true</em:bootstrap>
